Update documentation to use Resteasy-Mutiny
* update the getting started async guide
* update the vert.x guide to use the Mutiny API
* update the rest-client guide to cover Uni
* update the asynchronous message passing guide to use Uni and explain the API

Co-Authored-By: Guillaume Smet <guillaume.smet@gmail.com>

--- a/docs/src/main/asciidoc/getting-started.adoc
+++ b/docs/src/main/asciidoc/getting-started.adoc
@@ -445,16 +445,14 @@ NOTE: Before running the application, don't forget to stop the hot reload mode (
 
 == Async
 
-The resource can also use `CompletionStage` as return type to handle asynchronous actions:
+The resource can also use `CompletionStage` or `Uni` (requires the `quarkus-resteasy-mutiny` extension) as return type to handle asynchronous actions:
 
 [source,java]
 ----
 @GET
 @Produces(MediaType.TEXT_PLAIN)
-public CompletionStage<String> hello() {
-    return CompletableFuture.supplyAsync(() -> {
-        return "hello";
-    });
+public Uni<String> hello() {
+    return Uni.createFrom().item(() -> "hello");
 }
 ----
 
