Qute - ignore expressions/tags starting with invalid identifiers
- make it possible to use escape sequences to insert delimiters
- update docs
- resolves #6621

--- a/docs/src/main/asciidoc/qute-reference.adoc
+++ b/docs/src/main/asciidoc/qute-reference.adoc
@@ -94,6 +94,32 @@ The dynamic parts of a template include:
 ** can be empty: `{#myTag image=true /}`,
 ** may declare nested section blocks: `{#if item.valid} Valid. {#else} Invalid. {/if}` and decide which block to render.
 
+=== Identifiers
+
+Expressions/tags must start with a curly bracket (`{`) followed by a valid identifier.
+A valid identifier is a digit, an alphabet character, underscore (`_`), or a section command (`#`).
+Expressions/tags starting with an invalid identifier are ignored.
+A closing curly bracket (`}`) is ignored if not inside an expression/tag.
+ 
+.hello.html
+[source,html]
+----
+<html>
+   <body>
+   {_foo}       <1>
+   {  foo}       <2>
+   {{foo}}      <3>
+   {"foo":true} <4>
+   </body>
+</html>
+----
+<1> Evaluated: expression starts with underscore.
+<2> Ignored: expression starts with whitespace. 
+<3> Ignored: expression starts with `{`.
+<4> Ignored: expression starts with `"`.
+
+TIP: It is also possible to use escape sequences `\{` and `\}` to insert delimiters in the text. In fact, an escape sequence is usually only needed for the start delimiter, ie. `\\{foo}` will be rendered as `{foo}` (no evaluation will happen).
+
 ==== Expressions
 
 An expression consists of:
