--- a/docs/src/main/asciidoc/index.adoc
+++ b/docs/src/main/asciidoc/index.adoc
@@ -49,6 +49,7 @@ include::quarkus-intro.adoc[tag=intro]
 * link:cdi-reference.html[Contexts and Dependency Injection] _(advanced)_
 * link:security-openid-connect.html[Using OpenID Connect Adapter to Protect JAX-RS Applications]
 * link:security-openid-connect-web-authentication.html[Protecting Web Applications Using OpenID Connect]
+* link:security-openid-connect-multitenancy.html[Supporting Multi-Tenancy in OpenID Connect Applications]
 * link:security-keycloak-authorization.html[Keycloak Authorization]
 * link:kogito.html[Using Kogito (business automation with processes and rules)]
 * link:security-oauth2.html[Using OAuth2 RBAC]
